# PengolinCoin-Core

./: .travis.yml  CMakeLists.txt  CONTRIBUTING.md  COPYING  INSTALL  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.status  configure  configure.ac  libtool  pengolincoind-new-gui.files  pengolincoind-new-gui.includes
src/qt/: CMakeLists.txt  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  bitcoinaddressvalidator.cpp  bitcoinamountfield.cpp  bitcoinunits.cpp  bitcoinunits.h  blockexplorer.cpp  blockexplorer.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  governancepage.cpp  governancepage.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macnotificationhandler.h  macnotificationhandler.mm  moc_zecdcontroldialog.cpp  networkstyle.cpp  notificator.cpp  notificator.h  openuridialog.cpp  openuridialog.h  optionsdialog.cpp  (+43 more)
src/qt/.deps/: qt_libbitcoinqt_a-addressbookpage.Po  qt_libbitcoinqt_a-addresstablemodel.Po  qt_libbitcoinqt_a-askpassphrasedialog.Po  qt_libbitcoinqt_a-bantablemodel.Po  qt_libbitcoinqt_a-bitcoinaddressvalidator.Po  qt_libbitcoinqt_a-bitcoinamountfield.Po  qt_libbitcoinqt_a-bitcoinunits.Po  qt_libbitcoinqt_a-blockexplorer.Po  qt_libbitcoinqt_a-clientmodel.Po  qt_libbitcoinqt_a-coincontroldialog.Po  qt_libbitcoinqt_a-coincontroltreewidget.Po  qt_libbitcoinqt_a-csvmodelwriter.Po  qt_libbitcoinqt_a-editaddressdialog.Po  qt_libbitcoinqt_a-governancepage.Po  qt_libbitcoinqt_a-guiutil.Po  qt_libbitcoinqt_a-intro.Po  qt_libbitcoinqt_a-moc_addressbookpage.Po  qt_libbitcoinqt_a-moc_addresstablemodel.Po  qt_libbitcoinqt_a-moc_askpassphrasedialog.Po  qt_libbitcoinqt_a-moc_bantablemodel.Po  qt_libbitcoinqt_a-moc_bitcoinaddressvalidator.Po  qt_libbitcoinqt_a-moc_bitcoinamountfield.Po  qt_libbitcoinqt_a-moc_bitcoinunits.Po  qt_libbitcoinqt_a-moc_blockexplorer.Po  qt_libbitcoinqt_a-moc_clientmodel.Po  qt_libbitcoinqt_a-moc_coincontroldialog.Po  qt_libbitcoinqt_a-moc_coincontroltreewidget.Po  qt_libbitcoinqt_a-moc_csvmodelwriter.Po  qt_libbitcoinqt_a-moc_editaddressdialog.Po  qt_libbitcoinqt_a-moc_governancepage.Po  qt_libbitcoinqt_a-moc_guiutil.Po  qt_libbitcoinqt_a-moc_intro.Po  qt_libbitcoinqt_a-moc_macdockiconhandler.Po  qt_libbitcoinqt_a-moc_macnotificationhandler.Po  qt_libbitcoinqt_a-moc_notificator.Po  qt_libbitcoinqt_a-moc_openuridialog.Po  qt_libbitcoinqt_a-moc_optionsdialog.Po  qt_libbitcoinqt_a-moc_optionsmodel.Po  qt_libbitcoinqt_a-moc_paymentserver.Po  qt_libbitcoinqt_a-moc_peertablemodel.Po  (+42 more)
src/qt/forms/: addressbookpage.ui  blockexplorer.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  openuridialog.ui  optionsdialog.ui  rpcconsole.ui  ui_zecdcontroldialog.h  zecdcontroldialog.ui
src/qt/locale/: pengolincoin_bg.ts  pengolincoin_ca.ts  pengolincoin_cs.ts  pengolincoin_da.ts  pengolincoin_de.ts  pengolincoin_en.ts  pengolincoin_en_GB.ts  pengolincoin_en_US.ts  pengolincoin_eo.ts  pengolincoin_es.ts  pengolincoin_es_ES.ts  pengolincoin_fi.ts  pengolincoin_fr_FR.ts  pengolincoin_hi_IN.ts  pengolincoin_hr.ts  pengolincoin_hr_HR.ts  pengolincoin_it.ts  pengolincoin_ja.ts  pengolincoin_ko_KR.ts  pengolincoin_lt_LT.ts  pengolincoin_nl.ts  pengolincoin_pl.ts  pengolincoin_pt.ts  pengolincoin_pt_BR.ts  pengolincoin_ro_RO.ts  pengolincoin_ru.ts  pengolincoin_sk.ts  pengolincoin_sv.ts  pengolincoin_tr.ts  pengolincoin_uk.ts  pengolincoin_vi.ts  pengolincoin_zh_CN.ts  pengolincoin_zh_TW.ts
src/qt/pengolincoin/: addnewaddressdialog.cpp  addnewaddressdialog.h  addnewcontactdialog.cpp  addnewcontactdialog.h  addresseswidget.cpp  addresseswidget.h  addressfilterproxymodel.cpp  addressfilterproxymodel.h  addressholder.cpp  addressholder.h  addresslabelrow.cpp  addresslabelrow.h  balancebubble.cpp  balancebubble.h  coincontrolecdwidget.cpp  coincontrolpgowidget.h  coldstakingmodel.cpp  coldstakingmodel.h  coldstakingwidget.cpp  coldstakingwidget.h  contactdropdownrow.cpp  contactdropdownrow.h  contactsdropdown.cpp  contactsdropdown.h  csrow.cpp  csrow.h  dashboardwidget.cpp  dashboardwidget.h  defaultdialog.cpp  defaultdialog.h  denomgenerationdialog.cpp  denomgenerationdialog.h  expandablebutton.cpp  expandablebutton.h  focuseddialog.cpp  focuseddialog.h  furabstractlistitemdelegate.cpp  furabstractlistitemdelegate.h  furlistrow.h  guitransactionsutils.cpp  (+66 more)
src/qt/pengolincoin/.deps/: qt_libbitcoinqt_a-addnewaddressdialog.Po  qt_libbitcoinqt_a-addnewcontactdialog.Po  qt_libbitcoinqt_a-addresseswidget.Po  qt_libbitcoinqt_a-addressfilterproxymodel.Po  qt_libbitcoinqt_a-addressholder.Po  qt_libbitcoinqt_a-addresslabelrow.Po  qt_libbitcoinqt_a-coincontrolecdwidget.Po  qt_libbitcoinqt_a-coincontrolpgowidget.Po  qt_libbitcoinqt_a-coldstakingmodel.Po  qt_libbitcoinqt_a-coldstakingwidget.Po  qt_libbitcoinqt_a-contactdropdownrow.Po  qt_libbitcoinqt_a-contactsdropdown.Po  qt_libbitcoinqt_a-csrow.Po  qt_libbitcoinqt_a-dashboardwidget.Po  qt_libbitcoinqt_a-defaultdialog.Po  qt_libbitcoinqt_a-denomgenerationdialog.Po  qt_libbitcoinqt_a-expandablebutton.Po  qt_libbitcoinqt_a-furabstractlistitemdelegate.Po  qt_libbitcoinqt_a-guitransactionsutils.Po  qt_libbitcoinqt_a-loadingdialog.Po  qt_libbitcoinqt_a-lockunlock.Po  qt_libbitcoinqt_a-masternodeswidget.Po  qt_libbitcoinqt_a-masternodewizarddialog.Po  qt_libbitcoinqt_a-mninfodialog.Po  qt_libbitcoinqt_a-mnmodel.Po  qt_libbitcoinqt_a-mnrow.Po  qt_libbitcoinqt_a-moc_addnewaddressdialog.Po  qt_libbitcoinqt_a-moc_addnewcontactdialog.Po  qt_libbitcoinqt_a-moc_addresseswidget.Po  qt_libbitcoinqt_a-moc_addresslabelrow.Po  qt_libbitcoinqt_a-moc_coincontrolecdwidget.Po  qt_libbitcoinqt_a-moc_coincontrolpgowidget.Po  qt_libbitcoinqt_a-moc_coldstakingmodel.Po  qt_libbitcoinqt_a-moc_coldstakingwidget.Po  qt_libbitcoinqt_a-moc_contactdropdownrow.Po  (+59 more)
src/qt/res/: pengolincoin-qt-res.rc
src/qt/test/: paymentservertests.cpp  test_main.cpp  uritests.cpp
(+1173 files in other folders)
